# tagkit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  LICENSE  README.md  conftest.py  copilot-setup-steps.yml  cspell.json  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: copilot-setup-steps.yml  draft-release.yaml  publish-pypi.yaml  publish-test-pypi.yaml  release.yaml  run-checks.yaml  run-tests.yaml
docs/source/: api.md  conf.py  configuration.md  contributing.md  development.md  faq.md  index.md  index.rst  installation.md  quickstart.md  usage.md
docs/source/cli/: index.md
docs/source/development/: contributing.md  development_guide.md
docs/source/examples/: basic_reading.md  basic_writing.md  batch_processing.md  custom_tags.md  gps_mapping.md  index.md  metadata_analysis.md
docs/source/getting_started/: installation.md  quickstart.md
docs/source/reference/: api.md  datetime_api.md  tag_reference.md
docs/source/tag_io/: index.md
docs/source/tagkit/: exceptions.rst  exif_entry.rst  image_exif.rst  operations.rst  tag_registry.rst  types.rst  utils.rst  value_formatting.rst
docs/source/tagkit/core/: exceptions.rst  formatting.rst  registry.rst  tag.rst  types.rst  utils.rst
docs/source/tagkit/image/: collection.rst  exif.rst
docs/source/tagkit/tag_io/: base.rst  piexif_io.rst
docs/source/tutorials/: basic_exif_operations.md  index.md
docs/source/user_guide/: batch_processing.md  cli.md  datetime.md  reading.md  writing.md
scripts/: generate_test_images.py
src/tagkit/: __init__.py  exceptions.py  exif_entry.py  image_exif.py  operations.py  tag_registry.py  types.py  utils.py  value_formatting.py
src/tagkit/cli/: cli_formatting.py  cli_utils.py  file_resolver.py  formatting.py  main.py  view.py
src/tagkit/conf/: formatting.schema.json  formatting.yaml  models.py  registry.schema.json  registry.yaml  tag_registry.yaml  tag_value_format.yaml
src/tagkit/conf/backup/: tag_registry.yaml
src/tagkit/core/: __init__.py  datetime_utils.py  exceptions.py  formatting.py  registry.py  tag.py  types.py  utils.py  validation.py
src/tagkit/image/: __init__.py  collection.py  exif.py
src/tagkit/tag_io/: base.py  piexif_io.py
tests/: conftest.py  test_conf_schemas.py  test_exif_entry.py  test_exif_tag_dict.py  test_image_exif.py  test_init.py  test_noop.py  test_operations.py  test_tag_registry.py  test_tag_value_formatter.py  test_utils.py  test_value_formatting.py
tests/cli/: test_cli_utils.py  test_file_resolver.py  test_main.py  test_view.py
tests/conf/: README.md  doctest-img-metadata.json  img-metadata.schema.json  test-img-metadata.json
tests/core/: test_datetime_utils.py  test_exceptions.py  test_exif_entry.py  test_exif_tag_dict.py  test_tag_registry.py  test_utils.py  test_validation.py  test_value_formatting.py
tests/image/: test_exif_image.py  test_exif_image_collection.py  test_image_collection.py  test_image_exif.py  test_tag_validation.py
tests/io/: test_base.py  test_image_read.py  test_piexif_io.py
tests/io/test_images/: metadata.json
tests/tag_io/: test_exif_tag_dict.py  test_image_read.py  test_piexif_io.py
tests/tag_io/test_images/: metadata.json
tests/timestamps/: __init__.py  test_datetime.py
