[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "tagkit"
description = "A CLI & Python API for editing EXIF data in photos."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["exif", "image", "metadata", "cli", "photo", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
description-content-type = "text/markdown"
authors = [{ name = "Robert Forest", email = "rvforest@gmail.com" }]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
  "piexif>=1.1.3",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "typer>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/rvforest/tagkit"
Documentation = "https://tagkit.readthedocs.io/"
Source = "https://github.com/rvforest/tagkit"
Issues = "https://github.com/rvforest/tagkit/issues"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "nox>=2025.2.9",
  "pillow>=11.2.1",                # For dynamically generating test jpg files
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.6",
  "types-pyyaml>=6.0.12.20250516",
]
docs = [
  "furo>=2024.8.6",
  "myst-parser>=3.0.1",
  "pyyaml>=6.0.2",
  "sphinx>=7.4.7",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-autodoc2>=0.5.0",
  "sphinx-jinja>=2.0.2",
]

[project.scripts]
tagkit = "tagkit.cli.main:app"

[tool.ruff]
exclude = ["tests/*"]

[tool.ruff.lint]
per-file-ignores = { "__init__.py" = ["F401"] }
select = ["T100"]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "0.1.0"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.versioningit.template-fields]
pep440 = true

[tool.coverage.run]
omit = ["noxfile.py", "tests/*"]

[tool.mypy]
exclude = ['^docs/']

[[tool.mypy.overrides]]
module = ["piexif.*"]
follow_untyped_imports = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
